--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+azure.storage.connection-string=${AZURE_STORAGE_CONNECTION_STRING}
+# Nombre de la carpeta donde guardaremos los archivos (puedes cambiarle el nombre si quieres)
+azure.storage.container-name=temario
+
