--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+        <groupId>com.azure.spring</groupId>
+        <artifactId>spring-cloud-azure-starter-storage-blob</artifactId>
+        <version>5.19.0</version>
+     </dependency>
+        <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
             <version>0.11.5</version>
