--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,4 @@ azure.storage.connection-string=${AZURE_STORAGE_CONNECTION_STRING}
 # Nombre de la carpeta donde guardaremos los archivos (puedes cambiarle el nombre si quieres)
 azure.storage.container-name=temario
 
+spring.flyway.repair-on-migrate=true
