Aumento tamaño archivos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,8 @@ azure.storage.connection-string=${AZURE_STORAGE_CONNECTION_STRING}
 azure.storage.container-name=temario
 
 spring.flyway.repair-on-migrate=true
+# Tamaño máximo del archivo individual
+spring.servlet.multipart.max-file-size=20MB
+
+# Tamaño máximo de la petición completa (archivo + datos del formulario)
+spring.servlet.multipart.max-request-size=20MB
