--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,9 @@ spring.servlet.multipart.max-file-size=20MB
 
 # Tamaño máximo de la petición completa (archivo + datos del formulario)
 spring.servlet.multipart.max-request-size=20MB
+
+stripe.api.key=${STRIPE_API_KEY}
+stripe.webhook.secret=${STRIPE_WEBHOOK_SECRET}
+client.url=${CLIENT_URL}
+
+jwt.secret=${JWT_SECRET}
